Bug Fix: Desktop Picker Window Shows Unnecessary Scrollbar

When the number of source items just exactly fill the container,
we displayed the scroll bar.

In this CL, we fixed the issue, and not displayed scroll bar in
that case.

BUG=636338

Review-Url: https://codereview.chromium.org/2304743002
Cr-Commit-Position: refs/heads/master@{#416763}

Former-commit-id: 6d191b6ae63639d0c55046ef4bc909726d25a30c